# network-collector

./: .gitignore  MIGRATION.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  create_task.py  list_scenes.py  run_task.py
config/: device_import_template.xlsx
core/: collector.py  crypto.py  db.py  expect_engine.py  parser_loader.py  runner.py  scene_registry.py  web_collector.py
docs/: UI原型.md  技术方案.md  讨论记录.md
network_collector.egg-info/: SOURCES.txt  requires.txt
parsers/: __init__.py  eip_check_cnt_route_basic.py  eip_check_cnt_route_longer.py  eip_check_idr_route_basic.py  eip_check_idr_route_longer.py
plugins/: __init__.py
plugins/eip_conflict_check/: __init__.py
ui/: __init__.py  command_set_panel.py  config_panel.py  device_panel.py  main_window.py  plugin_manager.py  result_panel.py  scene_editor.py  task_execution.py  task_panel.py
